# QuantTaurus

./: .env.example  .gitignore  LOOP_STATE.md  MINING_NOTES.md  README.md  README.zh-CN.md
bridge/: README.md  account_math.py  intraday_collector.py  moomoo_bridge.py  options_service.py  test_account_math.py  test_bridge_locks.py
deploy/: com.quanthaha.collector.plist  com.quanthaha.server.plist  com.quanttaurus.collector.plist  com.quanttaurus.server.plist
docs/: self-evolution-design.md  ta-strategy-catalog.md
docs/superpowers/specs/: 2026-06-10-moomoo-paper-account-design.md  2026-06-10-tech-analysis-tab-design.md
engine/: Cargo.toml
engine/crates/backtest/: Cargo.toml
engine/crates/backtest/src/: lib.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: lib.rs
engine/crates/data/: Cargo.toml
engine/crates/data/src/: binance.rs  cache.rs  lib.rs  stream.rs  yahoo.rs
engine/crates/evolve/: Cargo.toml
engine/crates/evolve/src/: lib.rs
engine/crates/factors/: Cargo.toml
engine/crates/factors/src/: lib.rs  ta_rules.rs
engine/crates/mine/: Cargo.toml
engine/crates/mine/src/: expr.rs  gp.rs  lib.rs  panel.rs  strategy.rs
engine/crates/server/: Cargo.toml
engine/crates/server/src/: main.rs  mine_job.rs  optbt.rs  paper.rs  plan.rs  routes.rs  sectors.rs  state.rs  ta.rs  ta_stats.rs
engine/crates/strategy/: Cargo.toml
engine/crates/strategy/src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  i18n.tsx  index.css  ws.ts
web/src/components/: BacktestPanel.tsx  ChampionRegistry.tsx  EvolvePanel.tsx  FactorLabPanel.tsx  FactorPanel.tsx  HoldingsGuide.tsx  MoomooAccountPanel.tsx  OptionPlansPanel.tsx  OptionsPanel.tsx  PaperPanel.tsx  PortfolioPanel.tsx  PriceChart.tsx  SectorPanel.tsx  StrategiesPanel.tsx  TechPanel.tsx  TopBar.tsx  TradeFeed.tsx  TradePlanPanel.tsx  UniversePlanPanel.tsx
