[package]
name = "qdata"
version.workspace = true
edition.workspace = true

[dependencies]
qcore = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
bincode.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
