[package]
name = "qevolve"
version.workspace = true
edition.workspace = true

[dependencies]
qcore = { path = "../core" }
qbacktest = { path = "../backtest" }
qstrategy = { path = "../strategy" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
anyhow.workspace = true
tracing.workspace = true
