[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
qcore = { path = "../core" }
qdata = { path = "../data" }
qfactors = { path = "../factors" }
qbacktest = { path = "../backtest" }
qstrategy = { path = "../strategy" }
qevolve = { path = "../evolve" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
qmine = { path = "../mine" }
